--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<div class="background">
+<div class="homepage-background">
     <nav>
         <img src="images/menu.svg" class="menu-img">
         <img src="images/logo.png" class="logo">
@@ -28,10 +28,9 @@
     <div class="home-text-container">
         <h1>Malware<br>Simulation</h1>
         <p>This Website Contains Various Type Of Malware Simulations To Help PC Beginners To Secure Their PC Avoid Getting Infected By Malware</p>
-        <a href="">Start Simulating</a>
-        <div class="home-control">
-            
-        </div>
+        <a href="trojan.html">Start Simulating</a>
+      </div>
+
     </div>
 </div>
 <script src="script.js"></script>
