--- a/trojan.html
+++ b/trojan.html
@@ -7,7 +7,15 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <img src="images/window.jpg" class="window-img">
-</div>
+    <div class="windowbackground"></div>
+    
+    <div class="gc-container" onclick="openApp()">
+        <img src="images/gcicon.svg" class="gc-icon">
+        <p class="gc-name">Browser</p>
+    </div>
+
+        <div class="taskbar">
+            <div class="taskbar-icons">
+                <img src="images/tb-windows-icon.svg" class="taskbar-icon-img">         
 </body>
 </html>
