--- a/index.html
+++ b/index.html
@@ -9,16 +9,9 @@
 <body>
 <div class="homepage-background">
     <nav>
-        <img src="images/menu.svg" class="menu-img">
         <img src="images/logo.png" class="logo">
         <ul>
-            <li><a href="">Home</a>
-            <li><a href="">Simulations</a>
-            <li><a href="">Prevention</a>
-            <li><a href="">Dark/Light Mode</a>
-        </ul>
-        <button type="button" onclick="toggleBtn()" id="btn"> <span></span>
-        </button>    
+            <li><a href="">Prevention Tips</a>   
     </nav>
 
     <div class="home-img-container">
@@ -27,8 +20,8 @@
 
     <div class="home-text-container">
         <h1>Malware<br>Simulation</h1>
-        <p>This Website Contains Various Type Of Malware Simulations To Help PC Beginners To Secure Their PC Avoid Getting Infected By Malware</p>
-        <a href="trojan.html">Start Simulating</a>
+        <p>This Website Contains Malware Simulations To Help PC Beginners To Secure Their PC Avoid Getting Infected By Malware</p>
+        <a href="malware.html">Start Simulating</a>
       </div>
 
     </div>
