--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <nav>
         <img src="images/logo.png" class="logo">
         <ul>
+            <li><a href="">Simulations</a> 
             <li><a href="">Prevention Tips</a>   
     </nav>
 
@@ -27,6 +28,5 @@
     </div>
 </div>
 <script src="script.js"></script>
-
 </body>
 </html>
