--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <img src="images/logo.png" class="logo">
         <ul>
             <li><a href="">Simulations</a> 
-            <li><a href="">Prevention Tips</a>   
+            <li><a href="prevention.html">Prevention Tips</a>   
     </nav>
 
     <div class="home-img-container">
