--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav>
         <img src="images/logo.png" class="logo">
         <ul>
-            <li><a href="">Simulations</a> 
+            <li><a href="malware.html">Simulations</a> 
             <li><a href="prevention.html">Prevention Tips</a>   
     </nav>
 
